--- a/src/kernel/debug/Makefile
+++ b/src/kernel/debug/Makefile
@@ -1,10 +1,8 @@
 ROOT = ../../..
 
-CFLAGS	= -O -fno-asynchronous-unwind-tables -fstrength-reduce -fomit-frame-pointer -fno-stack-protector -finline-functions -nostdinc -fno-builtin -I$(ROOT)/include
-
 OBJFILES = kprintf.o
  
 .c.o:
-	$(BLD_ARCH)-gcc $(CFLAGS) -o $(ROOT)/build-$(BLD_TARGET)/kernel/$@ -c $<
+	$(BLD_ARCH)-gcc $(CFLAGS) -I $(ROOT)/include -o $(ROOT)/build-$(BLD_TARGET)/kernel/$@ -c $<
 
 all: $(OBJFILES)
