--- a/src/kernel/modules/Makefile
+++ b/src/kernel/modules/Makefile
@@ -1,10 +1,8 @@
 ROOT = ../../..
 
-CFLAGS	= -O -fno-asynchronous-unwind-tables -fstrength-reduce -fomit-frame-pointer -finline-functions -nostdinc -fno-builtin -I$(ROOT)/include
-
 OBJFILES = elf.o elf_types.o initrd.o
  
 .c.o:
-	$(BLD_ARCH)-gcc $(CFLAGS) -o $(ROOT)/build-$(BLD_TARGET)/kernel/$@ -c $<
+	$(BLD_ARCH)-gcc $(CFLAGS) -I $(ROOT)/include -o $(ROOT)/build-$(BLD_TARGET)/kernel/$@ -c $<
 
 all: $(OBJFILES)
