Fixed makefile and minor build issue.

--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -1,10 +1,12 @@
+.PHONY: all
+
 all:
-	cd debug; make CFLAGS=$(CFLAGS)
-	cd init; make CFLAGS=$(CFLAGS)
-	cd ipc; make CFLAGS=$(CFLAGS)
-	cd mm; make CFLAGS=$(CFLAGS)
-	cd modules; make CFLAGS=$(CFLAGS)
-	cd syscall; make CFLAGS=$(CFLAGS)
-	cd task; make CFLAGS=$(CFLAGS)
-	cd vfs; make CFLAGS=$(CFLAGS)
+	cd debug; make CFLAGS="$(CFLAGS)"
+	cd init; make CFLAGS="$(CFLAGS)"
+	cd ipc; make CFLAGS="$(CFLAGS)"
+	cd mm; make CFLAGS="$(CFLAGS)"
+	cd modules; make CFLAGS="$(CFLAGS)"
+	cd syscall; make CFLAGS="$(CFLAGS)"
+	cd task; make CFLAGS="$(CFLAGS)"
+	cd vfs; make CFLAGS="$(CFLAGS)"
 	
