--- a/src/hal/i386/Makefile
+++ b/src/hal/i386/Makefile
@@ -1,6 +1,6 @@
 ROOT = ../../..
 
-CC	?= i586-elf
+CC	= i586-elf
 CFLAGS	= -O -fno-asynchronous-unwind-tables -fstrength-reduce -fomit-frame-pointer -finline-functions -nostdinc -fno-builtin -I$(ROOT)/include -L$(ROOT)/lib
 
 OBJFILES = cpuid.o exception.o fpu.o gdt.o ioapic.o idt.o irq.o isrs.o lapic.o main.o msr.o pic.o pit.o pmm.o ports.o syscall.o timer.o vmm.o
