--- a/src/lib/libgeneric/Makefile
+++ b/src/lib/libgeneric/Makefile
@@ -3,8 +3,8 @@ ROOT = ../../..
 OBJFILES = bit.o math.o ordered_array.o string.o
 
 .c.o:
-	$(BLD_TARGET)-gcc $(CFLAGS) -I $(ROOT)/include -o $(ROOT)/build-$(ARCH)/lib/libgeneric/$@ -c $<
+	$(CC)-gcc $(CFLAGS) -I $(ROOT)/include -o $(ROOT)/build-$(BLD_TARGET)/lib/libgeneric/$@ -c $<
 	
 all: $(OBJFILES)
-	cd $(ROOT)/build-$(ARCH)/lib/libgeneric; $(BLD_TARGET)-ar rs libgeneric-$(ARCH).a $(OBJFILES)
-	cp $(ROOT)/build-$(ARCH)/lib/libgeneric/libgeneric-$(ARCH).a $(ROOT)/lib
+	cd $(ROOT)/build-$(BLD_TARGET)/lib/libgeneric; $(CC)-ar rs libgeneric-$(BLD_TARGET).a $(OBJFILES)
+	cp $(ROOT)/build-$(BLD_TARGET)/lib/libgeneric/libgeneric-$(BLD_TARGET).a $(ROOT)/lib
