--- a/src/drivers/cmos/Makefile
+++ b/src/drivers/cmos/Makefile
@@ -1,12 +1,10 @@
 ROOT = ../../..
 
-CC	= i586-elf-gcc
-CFLAGS	= -O -fno-asynchronous-unwind-tables -fstrength-reduce -fomit-frame-pointer -finline-functions -nostdinc -fno-builtin -I$(ROOT)/include
-LD	= i586-elf-ld
-
+CCBASE	?= i586-elf
+CFLAGS	?= -O -fno-asynchronous-unwind-tables -fstrength-reduce -fomit-frame-pointer -finline-functions -nostdinc -fno-builtin -I$(ROOT)/include
 OBJFILES = cmos.o
  
 .c.o:
-	$(CC) $(CFLAGS) -o $(ROOT)/build/drivers/cmos/$@ -c $<
+	$(CCBASE)-gcc $(CFLAGS) -o $(ROOT)/build/drivers/cmos/$@ -c $<
 	
 all: $(OBJFILES)
