--- a/src/drivers/raspi/Makefile
+++ b/src/drivers/raspi/Makefile
@@ -1,6 +1,6 @@
 ROOT = ../../..
-$CC ?= arm-none-eabi
+CCBASE ?= arm-none-eabi
 
 all:
-	cd uart; make CC=$(CC);
-	cd gpio; make CC=$(CC);
+	cd uart; make CCBASE=$(CCBASE);
+	cd gpio; make CCBASE=$(CCBASE);
