--- a/src/kernel/init/Makefile
+++ b/src/kernel/init/Makefile
@@ -3,6 +3,6 @@ ROOT = ../../..
 OBJFILES = main.o
  
 .c.o:
-	$(CC)-gcc $(CFLAGS) -I $(ROOT)/include -o $(ROOT)/build-$(BLD_TARGET)/kernel/$@ -c $<
+	$(CCBASE)-gcc $(CFLAGS) -I $(ROOT)/include -o $(ROOT)/build-$(BLD_TARGET)/kernel/$@ -c $<
 
 all: $(OBJFILES)
