--- a/src/kernel/task/Makefile
+++ b/src/kernel/task/Makefile
@@ -3,6 +3,6 @@ ROOT = ../../..
 OBJFILES = process.o task.o thread.o
  
 .c.o:
-	$(CC)-gcc $(CFLAGS) -I $(ROOT)/include -o $(ROOT)/build-$(BLD_TARGET)/kernel/$@ -c $<
+	$(CCBASE)-gcc $(CFLAGS) -I $(ROOT)/include -o $(ROOT)/build-$(BLD_TARGET)/kernel/$@ -c $<
 
 all: $(OBJFILES)
